--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   user-select: none;
 }
 body {
-  background: url("images/background.jpg");
+  background: url("background.jpg");
   background-size: cover;
 }
 #impo, #sus, #upgrades {
